Fixed board being too small on mobile after recent changes

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -36,17 +36,11 @@ body {
 }
 
 h2 {
-  @media screen and (max-width: 500px), screen and (max-height: 600px) {
-    margin: 10px 0;
-    font-size: 18px;
-  }
+  font-size: 3vmin;
 }
 
 h3 {
-  @media screen and (max-width: 500px), screen and (max-height: 600px) {
-    margin: 10px 0;
-    font-size: 18px;
-  }
+  font-size: 2.25vmin;
 }
 
 .controls .buttons {
@@ -56,20 +50,14 @@ h3 {
 
   button.btn {
     display: block;
-    padding: 5px 10px;
+    padding: 0.5vmin 1vmin;
     background: none;
-    margin: 10px;
+    margin: 1vw;
     color: white;
     font-family: inherit;
-    font-size: 12pt;
+    font-size: 2vmin;
     border-radius: 4px;
     background-color: #2e3436;
-
-    @media screen and (max-width: 500px), screen and (max-height: 600px) {
-      padding: 3px 5px;
-      margin: 5px;
-      font-size: 9pt;
-    }
 
      &:hover {
       cursor: pointer;
@@ -175,10 +163,10 @@ h3 {
 
 .board {
   flex: 3 3;
-  max-height: 64vmin;
-  max-width: 64vmin;
+  max-height: 96vmin;
+  max-width: 96vmin;
 
-  width: 64vmin;
+  width: 96vmin;
   flex-direction: column;
   display: flex;
 
